--- a/config.ini.in
+++ b/config.ini.in
@@ -268,6 +268,8 @@ compiler_inc="${VE_CPU_COMPILER_INC}"
 compiler_lib="${VE_CPU_COMPILER_LIB}"
 compiler_flg="${VE_CPU_COMPILER_FLG}"
 compiler_ext="${VE_CPU_COMPILER_EXT}"
+#compiler_ext="${VE_CPU_COMPILER_EXT} -fopt-info-vec-optimized"
+#compiler_ext="${VE_CPU_COMPILER_EXT} -qopt-report-phase=vec"
 object_path="${VE_CPU_OBJECT_PATH}"
 template_path="${VE_CPU_TEMPLATE_PATH}"
 kernel_path="${VE_CPU_KERNEL_PATH}"
