cape: Renamed configuration options and made profiling dynamic.
kernel profiling was prior to this change a compile-time option.
It is now controllable via env-var *_EXEC_PROFILING similar to *_EXEC_TIMING.

--- a/config.ini.in
+++ b/config.ini.in
@@ -255,10 +255,11 @@ timing = false
 type = ve
 impl = ${CMAKE_INSTALL_PREFIX}/lib/libbh_ve_cpu${CMAKE_SHARED_LIBRARY_SUFFIX}
 libs = ${CMAKE_INSTALL_PREFIX}/lib/libbh_visualizer${CMAKE_SHARED_LIBRARY_SUFFIX},${CMAKE_INSTALL_PREFIX}/lib/libbh_fftw${CMAKE_SHARED_LIBRARY_SUFFIX}
-timing = ${VE_CPU_TIMING}
-bind = ${VE_CPU_BIND}
-vcache_size = ${VE_CPU_VCACHE_SIZE}
-preload = ${VE_CPU_PRELOAD}
+exec_timing = ${VE_CPU_EXEC_TIMING}
+exec_profiling = ${VE_CPU_EXEC_PROFILING}
+rt_bind = ${VE_CPU_RT_BIND}
+rt_vcache = ${VE_CPU_RT_VCACHE}
+jit_preload = ${VE_CPU_JIT_PRELOAD}
 jit_level = ${VE_CPU_JIT_LEVEL}
 jit_nested = ${VE_CPU_JIT_NESTED}
 jit_dumpsrc = ${VE_CPU_JIT_DUMPSRC}
