--- a/ve/cpu/tools/Makefile
+++ b/ve/cpu/tools/Makefile
@@ -4,7 +4,7 @@ BDIR=/tmp/bhbuild_cpu/
 #PAR_LVL=-j$(shell expr $(shell nproc) / 2)
 PAR_LVL=-j1
 BH_PYTHON=python
-TEST_EXCLUDE=--exclude-test=test_lbm_3d
+TEST_EXCLUDE=--exclude-test=test_lbm_3d --exclude-test=test_lu --exclude-test=test_matmul --exclude-test=test_reduce_bool
 DUMPSRC=1
 
 BUILD_OPTIONS=
